# cppmandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  saveimage.py  zoom.py
autozoom/: autozoom.cpp  autozoom.hpp
buddhabrot/: CMakeLists.txt  buddhabrot.cpp  buddhabrot.hpp
gui/: gui.cpp  gui.hpp
mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.hpp
test/: main_autozoom.cpp  main_buddhabrot.cpp  main_gui.cpp  main_mandelbrot.cpp
